--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An attempt at OC",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d dist"
   },
   "author": "Andrew De La Paz",
   "license": "MIT"
